src/test/deca/codegen/valid/test_arth.deca
// Description:
//    Test la géneration du code assembleur, 
//    pour les operation arithémtiques
//    Plus/Multiply/Division/Minus/Modulo operation et le unary minus
// 	  TEST PARTIE C / Sans objet
// Resultats:
// u = 96
// u = 229
// u = −532830
// u = 597
// u = -597
// u = 597
// u = 0
// u = 296640
// u = 8192
// u = 100663296
// u = 100663296
// u = 100663296
// Historique:
//    cree le 01/01/2023

{
	int u = ((((((5+4+3)+2)+6)+9)+7)+60);
	println(u);
	u =(((((((5+4-3))*2)+6)*9)+7)+60);
	println(u);
	u = ((((((5+5*3)+2)*6)+9)+7)*60)*(-60) + -30;
	println(u);
	u =(((((((5+4/3))*2)+6)*9)*7)+60)/2;
	println(u);
	println(-u);
	u = -u;
	println(u);
	u = (((((((5+4/3))*2)+6)*9)*7)+60)%2;
	println(u);
	u = (((((((5+4/3))*2)+6)*9)*7)+60)*(2*(4*(5*(6))));
	println(u);
	u = ((((((((1*2)*2)*2)*2)*2)*2)*2))*((((((1*2)*2)*2)*2)*2)*2);
	println(u);
	u = ((((((((((((((((1*2)*2)*2)*2)*2)*2)*2))*((((((1*2)*2)*2)*2)*2)*3)*2)*2)*2)*2)*2)*2)*2))*((((((1*2)*2)*2)*2)*2)*2);
	println(u);
	u = ((((((((((((((((1*2)*2)*2)*2)*2)*2)*2))*((((((1*2)*2)*2)*2)*2)*3)*2)*2)*2)*2)*2)*2)*2))*((((((1*2)*2)*2)*2)*2)*2);
	println(u);
	u = ((((((((((((((((1*2)*2)*2)*2)*2)*2)*2))*((((((1*2)*2)*2)*2)*2)*3)*2)*2)*2)*2)*2)*2)*2))*((((((1*2)*2)*2)*2)*2)*2);
	println(u);

}
