src/test/deca/codegen/invalid/test_arth_multiply.deca
// Description:
//    Test la géneration du code assembleur, 
//    pour les operation arithémtiques
//    Plus/Multiply/Division/Minus/Modulo operation et le unary minus
// 	  TEST PARTIE C / Sans objet
// Resultats:
//
// Historique:
//    cree le 01/01/2023

{

}
